@@ -11,7 +11,7 @@
  * See the file "license.terms" for information on usage and redistribution
  * of this file, and for a DISCLAIMER OF ALL WARRANTIES.
  *
- * RCS: $Id: tkInt.h,v 1.46 2002/06/15 01:09:36 hobbs Exp $ 
+ * RCS: $Id: tkInt.h,v 1.47 2002/06/15 01:54:47 hobbs Exp $ 
  */
 
 #ifndef _TKINT
@@ -432,11 +432,6 @@ typedef struct TkDisplay {
      * Information used by tkUnixWm.c and tkWinWm.c only:
      */
 
-    int wmTracing;              /* Used to enable or disable tracing in 
-				 * this module.  If tracing is enabled, 
-				 * then information is printed on
-				 * standard output about interesting 
-				 * interactions with the window manager. */
     struct TkWmInfo *firstWmPtr;  /* Points to first top-level window. */
     struct TkWmInfo *foregroundWmPtr;    
                                 /* Points to the foreground window. */
@@ -501,12 +496,13 @@ typedef struct TkDisplay {
  * Flag values for TkDisplay flags.
  *  TK_DISPLAY_COLLAPSE_MOTION_EVENTS:	(default on)
  *	Indicates that we should collapse motion events on this display
- *  TK_USE_INPUT_METHODS:		(default off)
+ *  TK_DISPLAY_XIM_SPOT:		(default off)
  *	Indicates that we should use over-the-spot XIM on this display
  */
 
 #define TK_DISPLAY_COLLAPSE_MOTION_EVENTS	(1 << 0)
-#define TK_USE_XIM_SPOT				(1 << 1)
+#define TK_DISPLAY_XIM_SPOT			(1 << 1)
+#define TK_DISPLAY_WM_TRACING			(1 << 2)
 
 /*
  * One of the following structures exists for each error handler
